--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -355,18 +355,21 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="e34a5130392947ce9a9bd674005b9ffb-db95686ad71042a2986ef699a96b6e18" name="e34a5130392947ce9a9bd674005b9ffb" class="tab" checked=""><label for="e34a5130392947ce9a9bd674005b9ffb-db95686ad71042a2986ef699a96b6e18">General</label>
-<input type="radio" id="e34a5130392947ce9a9bd674005b9ffb-12796f5fe46a479f9795f3d09453f400" name="e34a5130392947ce9a9bd674005b9ffb" class="tab"><label for="e34a5130392947ce9a9bd674005b9ffb-12796f5fe46a479f9795f3d09453f400">Startup</label>
-<input type="radio" id="e34a5130392947ce9a9bd674005b9ffb-e6f72f1d8fc04deca16c9bc26cfcd342" name="e34a5130392947ce9a9bd674005b9ffb" class="tab"><label for="e34a5130392947ce9a9bd674005b9ffb-e6f72f1d8fc04deca16c9bc26cfcd342">Android</label>
-<input type="radio" id="e34a5130392947ce9a9bd674005b9ffb-0b339c99c1984274b519036a6d21b3c3" name="e34a5130392947ce9a9bd674005b9ffb" class="tab"><label for="e34a5130392947ce9a9bd674005b9ffb-0b339c99c1984274b519036a6d21b3c3">iOS</label>
-<input type="radio" id="e34a5130392947ce9a9bd674005b9ffb-c57a86d298ad47c6a988ae197f5cf3fd" name="e34a5130392947ce9a9bd674005b9ffb" class="tab"><label for="e34a5130392947ce9a9bd674005b9ffb-c57a86d298ad47c6a988ae197f5cf3fd">Windows</label>
+<input type="radio" id="e742edc7e4d24458ba0f471ec6f9b785-fd19bc4fd4e44e09821f417ec68e7c83" name="e742edc7e4d24458ba0f471ec6f9b785" class="tab" checked=""><label for="e742edc7e4d24458ba0f471ec6f9b785-fd19bc4fd4e44e09821f417ec68e7c83">General</label>
+<input type="radio" id="e742edc7e4d24458ba0f471ec6f9b785-c9f6c920c05743e58e65496b1e5697fd" name="e742edc7e4d24458ba0f471ec6f9b785" class="tab"><label for="e742edc7e4d24458ba0f471ec6f9b785-c9f6c920c05743e58e65496b1e5697fd">Startup</label>
+<input type="radio" id="e742edc7e4d24458ba0f471ec6f9b785-f7bce196f91b48d9b0d369784f6834f2" name="e742edc7e4d24458ba0f471ec6f9b785" class="tab"><label for="e742edc7e4d24458ba0f471ec6f9b785-f7bce196f91b48d9b0d369784f6834f2">Android</label>
+<input type="radio" id="e742edc7e4d24458ba0f471ec6f9b785-af6ad9513f4449cc879c3aca2fa43a65" name="e742edc7e4d24458ba0f471ec6f9b785" class="tab"><label for="e742edc7e4d24458ba0f471ec6f9b785-af6ad9513f4449cc879c3aca2fa43a65">iOS</label>
+<input type="radio" id="e742edc7e4d24458ba0f471ec6f9b785-78edaa2dd1c64bec8641dee672c3d7ae" name="e742edc7e4d24458ba0f471ec6f9b785" class="tab"><label for="e742edc7e4d24458ba0f471ec6f9b785-78edaa2dd1c64bec8641dee672c3d7ae">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
