--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -357,16 +357,19 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5f272ff2392646ba9b2feeb869366e8c-95edff84f2a349c38a381446e11c9d70" name="5f272ff2392646ba9b2feeb869366e8c" class="tab" checked><label for="5f272ff2392646ba9b2feeb869366e8c-95edff84f2a349c38a381446e11c9d70" >General</label>
-<input type="radio" id="5f272ff2392646ba9b2feeb869366e8c-9337e34ee769449c9ada91567dc4fc20" name="5f272ff2392646ba9b2feeb869366e8c" class="tab" ><label for="5f272ff2392646ba9b2feeb869366e8c-9337e34ee769449c9ada91567dc4fc20" >Startup</label>
-<input type="radio" id="5f272ff2392646ba9b2feeb869366e8c-afa8c1d2b053401fa5dbbd7bee09eff1" name="5f272ff2392646ba9b2feeb869366e8c" class="tab" ><label for="5f272ff2392646ba9b2feeb869366e8c-afa8c1d2b053401fa5dbbd7bee09eff1" >Android</label>
-<input type="radio" id="5f272ff2392646ba9b2feeb869366e8c-4cf7b81283964ec5bfcb00e4680ca57a" name="5f272ff2392646ba9b2feeb869366e8c" class="tab" ><label for="5f272ff2392646ba9b2feeb869366e8c-4cf7b81283964ec5bfcb00e4680ca57a" >iOS</label>
+<input type="radio" id="24ed2d8e166d402d8bcb79bf7818c820-638211a4a38946aca89ae45eb9ce6b5b" name="24ed2d8e166d402d8bcb79bf7818c820" class="tab" checked><label for="24ed2d8e166d402d8bcb79bf7818c820-638211a4a38946aca89ae45eb9ce6b5b" >General</label>
+<input type="radio" id="24ed2d8e166d402d8bcb79bf7818c820-99f6f5aa0153457395fe97791fea21bc" name="24ed2d8e166d402d8bcb79bf7818c820" class="tab" ><label for="24ed2d8e166d402d8bcb79bf7818c820-99f6f5aa0153457395fe97791fea21bc" >Startup</label>
+<input type="radio" id="24ed2d8e166d402d8bcb79bf7818c820-0e95e31ce9d04fda86781f3b06e27d5e" name="24ed2d8e166d402d8bcb79bf7818c820" class="tab" ><label for="24ed2d8e166d402d8bcb79bf7818c820-0e95e31ce9d04fda86781f3b06e27d5e" >Android</label>
+<input type="radio" id="24ed2d8e166d402d8bcb79bf7818c820-bcfb669fdbe745cd97aecb4c6dbccd9f" name="24ed2d8e166d402d8bcb79bf7818c820" class="tab" ><label for="24ed2d8e166d402d8bcb79bf7818c820-bcfb669fdbe745cd97aecb4c6dbccd9f" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
