--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -355,7 +355,10 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -376,11 +379,11 @@
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="80c55a2038ae4ef5b4d231cf0365954f-443585a473a842a691b2c712281bdff2" name="80c55a2038ae4ef5b4d231cf0365954f" class="tab" checked=""><label for="80c55a2038ae4ef5b4d231cf0365954f-443585a473a842a691b2c712281bdff2">General</label>
-<input type="radio" id="80c55a2038ae4ef5b4d231cf0365954f-377f57291212495681a957fc4c03c0c1" name="80c55a2038ae4ef5b4d231cf0365954f" class="tab"><label for="80c55a2038ae4ef5b4d231cf0365954f-377f57291212495681a957fc4c03c0c1">Startup</label>
-<input type="radio" id="80c55a2038ae4ef5b4d231cf0365954f-370f4b722a404940bca6b265f0e4c72e" name="80c55a2038ae4ef5b4d231cf0365954f" class="tab"><label for="80c55a2038ae4ef5b4d231cf0365954f-370f4b722a404940bca6b265f0e4c72e">Android</label>
-<input type="radio" id="80c55a2038ae4ef5b4d231cf0365954f-c032d15c44c3460a8772ab8068729de3" name="80c55a2038ae4ef5b4d231cf0365954f" class="tab"><label for="80c55a2038ae4ef5b4d231cf0365954f-c032d15c44c3460a8772ab8068729de3">iOS</label>
-<input type="radio" id="80c55a2038ae4ef5b4d231cf0365954f-d730bdb46a9a4c32aa2db8d4f82898a4" name="80c55a2038ae4ef5b4d231cf0365954f" class="tab"><label for="80c55a2038ae4ef5b4d231cf0365954f-d730bdb46a9a4c32aa2db8d4f82898a4">Windows</label>
+<input type="radio" id="8d7ca1f88b004972b2f3a5a8f73c27d0-4bfbd2198def470884e5d7b2612f50d7" name="8d7ca1f88b004972b2f3a5a8f73c27d0" class="tab" checked=""><label for="8d7ca1f88b004972b2f3a5a8f73c27d0-4bfbd2198def470884e5d7b2612f50d7">General</label>
+<input type="radio" id="8d7ca1f88b004972b2f3a5a8f73c27d0-985ac4634ade4801a29fd461be1d0ba2" name="8d7ca1f88b004972b2f3a5a8f73c27d0" class="tab"><label for="8d7ca1f88b004972b2f3a5a8f73c27d0-985ac4634ade4801a29fd461be1d0ba2">Startup</label>
+<input type="radio" id="8d7ca1f88b004972b2f3a5a8f73c27d0-c7e7fe860de74136afe4a911dd47268b" name="8d7ca1f88b004972b2f3a5a8f73c27d0" class="tab"><label for="8d7ca1f88b004972b2f3a5a8f73c27d0-c7e7fe860de74136afe4a911dd47268b">Android</label>
+<input type="radio" id="8d7ca1f88b004972b2f3a5a8f73c27d0-5529d26106b74118a6e4e78a7ae2e80d" name="8d7ca1f88b004972b2f3a5a8f73c27d0" class="tab"><label for="8d7ca1f88b004972b2f3a5a8f73c27d0-5529d26106b74118a6e4e78a7ae2e80d">iOS</label>
+<input type="radio" id="8d7ca1f88b004972b2f3a5a8f73c27d0-950a3d9ae6bd4ec9ada26c33e7ecb8be" name="8d7ca1f88b004972b2f3a5a8f73c27d0" class="tab"><label for="8d7ca1f88b004972b2f3a5a8f73c27d0-950a3d9ae6bd4ec9ada26c33e7ecb8be">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
