--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c0b3948122414e33ab37fff90d3df9ad-8fee21604ca948908eb0b21422960ca6" name="c0b3948122414e33ab37fff90d3df9ad" class="tab" checked><label for="c0b3948122414e33ab37fff90d3df9ad-8fee21604ca948908eb0b21422960ca6" >General</label>
-<input type="radio" id="c0b3948122414e33ab37fff90d3df9ad-723c6ae242144eae8be45e1ab12ab40a" name="c0b3948122414e33ab37fff90d3df9ad" class="tab" ><label for="c0b3948122414e33ab37fff90d3df9ad-723c6ae242144eae8be45e1ab12ab40a" >Startup</label>
-<input type="radio" id="c0b3948122414e33ab37fff90d3df9ad-3c34a474e1a74813b8c381f4f6d55db6" name="c0b3948122414e33ab37fff90d3df9ad" class="tab" ><label for="c0b3948122414e33ab37fff90d3df9ad-3c34a474e1a74813b8c381f4f6d55db6" >Android</label>
-<input type="radio" id="c0b3948122414e33ab37fff90d3df9ad-37fd881913f142f5b31611e6aae86569" name="c0b3948122414e33ab37fff90d3df9ad" class="tab" ><label for="c0b3948122414e33ab37fff90d3df9ad-37fd881913f142f5b31611e6aae86569" >iOS</label>
-<input type="radio" id="c0b3948122414e33ab37fff90d3df9ad-ec4f1c8cbbbb4a2891f031423eb0f7e3" name="c0b3948122414e33ab37fff90d3df9ad" class="tab" ><label for="c0b3948122414e33ab37fff90d3df9ad-ec4f1c8cbbbb4a2891f031423eb0f7e3" >Windows</label>
+<input type="radio" id="7f77c8f55d324be19812f7decc13a9ca-9fc7ccb8d7a8417484d88b70ed4969bd" name="7f77c8f55d324be19812f7decc13a9ca" class="tab" checked><label for="7f77c8f55d324be19812f7decc13a9ca-9fc7ccb8d7a8417484d88b70ed4969bd" >General</label>
+<input type="radio" id="7f77c8f55d324be19812f7decc13a9ca-6978dab58c6a4ebe8eda125567abf09d" name="7f77c8f55d324be19812f7decc13a9ca" class="tab" ><label for="7f77c8f55d324be19812f7decc13a9ca-6978dab58c6a4ebe8eda125567abf09d" >Startup</label>
+<input type="radio" id="7f77c8f55d324be19812f7decc13a9ca-8089bef4d54746ffbd4c7cf282f589ca" name="7f77c8f55d324be19812f7decc13a9ca" class="tab" ><label for="7f77c8f55d324be19812f7decc13a9ca-8089bef4d54746ffbd4c7cf282f589ca" >Android</label>
+<input type="radio" id="7f77c8f55d324be19812f7decc13a9ca-a5a91ce69d8c4095a7bffb083cfd538f" name="7f77c8f55d324be19812f7decc13a9ca" class="tab" ><label for="7f77c8f55d324be19812f7decc13a9ca-a5a91ce69d8c4095a7bffb083cfd538f" >iOS</label>
+<input type="radio" id="7f77c8f55d324be19812f7decc13a9ca-25986b56fe2c4c5ab249dfce9177dec3" name="7f77c8f55d324be19812f7decc13a9ca" class="tab" ><label for="7f77c8f55d324be19812f7decc13a9ca-25986b56fe2c4c5ab249dfce9177dec3" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
