--- a/locations/gps.html
+++ b/locations/gps.html
@@ -357,18 +357,21 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="bbea5e75428540f4986ca3e30bad7573-e36f31e1942e48c7a2490cfdc55951fa" name="bbea5e75428540f4986ca3e30bad7573" class="tab" checked><label for="bbea5e75428540f4986ca3e30bad7573-e36f31e1942e48c7a2490cfdc55951fa" >General</label>
-<input type="radio" id="bbea5e75428540f4986ca3e30bad7573-270dee2c9ef146f589704797b7a21cee" name="bbea5e75428540f4986ca3e30bad7573" class="tab" ><label for="bbea5e75428540f4986ca3e30bad7573-270dee2c9ef146f589704797b7a21cee" >Startup</label>
-<input type="radio" id="bbea5e75428540f4986ca3e30bad7573-23adcf5ac49647b3bd4f4fb9c25a200d" name="bbea5e75428540f4986ca3e30bad7573" class="tab" ><label for="bbea5e75428540f4986ca3e30bad7573-23adcf5ac49647b3bd4f4fb9c25a200d" >Android</label>
-<input type="radio" id="bbea5e75428540f4986ca3e30bad7573-ee743b9bae004603a2deed1824a797fd" name="bbea5e75428540f4986ca3e30bad7573" class="tab" ><label for="bbea5e75428540f4986ca3e30bad7573-ee743b9bae004603a2deed1824a797fd" >iOS</label>
-<input type="radio" id="bbea5e75428540f4986ca3e30bad7573-879dbb9912324dd0adc131f9b8bbbf0b" name="bbea5e75428540f4986ca3e30bad7573" class="tab" ><label for="bbea5e75428540f4986ca3e30bad7573-879dbb9912324dd0adc131f9b8bbbf0b" >Windows</label>
+<input type="radio" id="7d9d279a30fb4b76b14fcdf097f13266-d49de4a53e98407ca0ad188c853c68eb" name="7d9d279a30fb4b76b14fcdf097f13266" class="tab" checked><label for="7d9d279a30fb4b76b14fcdf097f13266-d49de4a53e98407ca0ad188c853c68eb" >General</label>
+<input type="radio" id="7d9d279a30fb4b76b14fcdf097f13266-317dc684646a4f5ea9db5d00ca43a616" name="7d9d279a30fb4b76b14fcdf097f13266" class="tab" ><label for="7d9d279a30fb4b76b14fcdf097f13266-317dc684646a4f5ea9db5d00ca43a616" >Startup</label>
+<input type="radio" id="7d9d279a30fb4b76b14fcdf097f13266-70be33d803d646228caed97d2a6809f6" name="7d9d279a30fb4b76b14fcdf097f13266" class="tab" ><label for="7d9d279a30fb4b76b14fcdf097f13266-70be33d803d646228caed97d2a6809f6" >Android</label>
+<input type="radio" id="7d9d279a30fb4b76b14fcdf097f13266-d5e77695a17844f894de2148861beea6" name="7d9d279a30fb4b76b14fcdf097f13266" class="tab" ><label for="7d9d279a30fb4b76b14fcdf097f13266-d5e77695a17844f894de2148861beea6" >iOS</label>
+<input type="radio" id="7d9d279a30fb4b76b14fcdf097f13266-32175115e23a4ba190b877d84a86076f" name="7d9d279a30fb4b76b14fcdf097f13266" class="tab" ><label for="7d9d279a30fb4b76b14fcdf097f13266-32175115e23a4ba190b877d84a86076f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
