--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -357,7 +357,10 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -372,10 +375,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="db1876e5b2ab4da2815e5152d8baf3f6-7aee6fb548b6432cbb9e661ff555f21b" name="db1876e5b2ab4da2815e5152d8baf3f6" class="tab" checked><label for="db1876e5b2ab4da2815e5152d8baf3f6-7aee6fb548b6432cbb9e661ff555f21b" >General</label>
-<input type="radio" id="db1876e5b2ab4da2815e5152d8baf3f6-c6caf360dbdf472cbe42db771144d054" name="db1876e5b2ab4da2815e5152d8baf3f6" class="tab" ><label for="db1876e5b2ab4da2815e5152d8baf3f6-c6caf360dbdf472cbe42db771144d054" >Startup</label>
-<input type="radio" id="db1876e5b2ab4da2815e5152d8baf3f6-81d6e24d969b4d009b8502f3502cbd4e" name="db1876e5b2ab4da2815e5152d8baf3f6" class="tab" ><label for="db1876e5b2ab4da2815e5152d8baf3f6-81d6e24d969b4d009b8502f3502cbd4e" >Android</label>
-<input type="radio" id="db1876e5b2ab4da2815e5152d8baf3f6-c699dd74433e49379211936020806a04" name="db1876e5b2ab4da2815e5152d8baf3f6" class="tab" ><label for="db1876e5b2ab4da2815e5152d8baf3f6-c699dd74433e49379211936020806a04" >iOS</label>
+<input type="radio" id="7d31116a0a21473b95cf1a12827d1797-b793991fa40a47e9a330e0462cc2ccff" name="7d31116a0a21473b95cf1a12827d1797" class="tab" checked><label for="7d31116a0a21473b95cf1a12827d1797-b793991fa40a47e9a330e0462cc2ccff" >General</label>
+<input type="radio" id="7d31116a0a21473b95cf1a12827d1797-cc24f59c456548a3941c4c6acb5ea5ce" name="7d31116a0a21473b95cf1a12827d1797" class="tab" ><label for="7d31116a0a21473b95cf1a12827d1797-cc24f59c456548a3941c4c6acb5ea5ce" >Startup</label>
+<input type="radio" id="7d31116a0a21473b95cf1a12827d1797-567ee4152a2d475eaa5e9b44d9f4591b" name="7d31116a0a21473b95cf1a12827d1797" class="tab" ><label for="7d31116a0a21473b95cf1a12827d1797-567ee4152a2d475eaa5e9b44d9f4591b" >Android</label>
+<input type="radio" id="7d31116a0a21473b95cf1a12827d1797-a91704c105ce483bbd7e9952318c9eea" name="7d31116a0a21473b95cf1a12827d1797" class="tab" ><label for="7d31116a0a21473b95cf1a12827d1797-a91704c105ce483bbd7e9952318c9eea" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
