--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -355,7 +355,10 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -364,11 +367,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="bd6160246b5346ae81d8bd52f3afec42-9f38844af78b4c60834e27f4dd9cec26" name="bd6160246b5346ae81d8bd52f3afec42" class="tab" checked=""><label for="bd6160246b5346ae81d8bd52f3afec42-9f38844af78b4c60834e27f4dd9cec26">General</label>
-<input type="radio" id="bd6160246b5346ae81d8bd52f3afec42-6f382a0b48d44496a7379fbcf4141d51" name="bd6160246b5346ae81d8bd52f3afec42" class="tab"><label for="bd6160246b5346ae81d8bd52f3afec42-6f382a0b48d44496a7379fbcf4141d51">Startup</label>
-<input type="radio" id="bd6160246b5346ae81d8bd52f3afec42-cb12c76093014282a8442cf4d3731cae" name="bd6160246b5346ae81d8bd52f3afec42" class="tab"><label for="bd6160246b5346ae81d8bd52f3afec42-cb12c76093014282a8442cf4d3731cae">Android</label>
-<input type="radio" id="bd6160246b5346ae81d8bd52f3afec42-7d38e4afedd84a18903efcc70c8f160a" name="bd6160246b5346ae81d8bd52f3afec42" class="tab"><label for="bd6160246b5346ae81d8bd52f3afec42-7d38e4afedd84a18903efcc70c8f160a">iOS</label>
-<input type="radio" id="bd6160246b5346ae81d8bd52f3afec42-b0035efea0594cb4a3017c8f453498c4" name="bd6160246b5346ae81d8bd52f3afec42" class="tab"><label for="bd6160246b5346ae81d8bd52f3afec42-b0035efea0594cb4a3017c8f453498c4">Windows</label>
+<input type="radio" id="50480ddcd7b84e5eb7d3437a7341d3f1-178964d5e0d6431aad9cf36f7e641401" name="50480ddcd7b84e5eb7d3437a7341d3f1" class="tab" checked=""><label for="50480ddcd7b84e5eb7d3437a7341d3f1-178964d5e0d6431aad9cf36f7e641401">General</label>
+<input type="radio" id="50480ddcd7b84e5eb7d3437a7341d3f1-0373dce9021c4345b38917c2e5cde87a" name="50480ddcd7b84e5eb7d3437a7341d3f1" class="tab"><label for="50480ddcd7b84e5eb7d3437a7341d3f1-0373dce9021c4345b38917c2e5cde87a">Startup</label>
+<input type="radio" id="50480ddcd7b84e5eb7d3437a7341d3f1-22170b9f121a4a4b9ddd969fd9f42487" name="50480ddcd7b84e5eb7d3437a7341d3f1" class="tab"><label for="50480ddcd7b84e5eb7d3437a7341d3f1-22170b9f121a4a4b9ddd969fd9f42487">Android</label>
+<input type="radio" id="50480ddcd7b84e5eb7d3437a7341d3f1-c9776fa9813a46a9871f2bc1c7f2408c" name="50480ddcd7b84e5eb7d3437a7341d3f1" class="tab"><label for="50480ddcd7b84e5eb7d3437a7341d3f1-c9776fa9813a46a9871f2bc1c7f2408c">iOS</label>
+<input type="radio" id="50480ddcd7b84e5eb7d3437a7341d3f1-aca2ac2a278442bbb297c5c998624fc2" name="50480ddcd7b84e5eb7d3437a7341d3f1" class="tab"><label for="50480ddcd7b84e5eb7d3437a7341d3f1-aca2ac2a278442bbb297c5c998624fc2">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
