--- a/push/azure.html
+++ b/push/azure.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="2dc4f3b414d347228c2357bbb9fae050-760d8ccbb1d44f13b58b8e2038250eab" name="2dc4f3b414d347228c2357bbb9fae050" class="tab" checked><label for="2dc4f3b414d347228c2357bbb9fae050-760d8ccbb1d44f13b58b8e2038250eab" >General</label>
-<input type="radio" id="2dc4f3b414d347228c2357bbb9fae050-61bb40185783401ea3cdddfd46a407ad" name="2dc4f3b414d347228c2357bbb9fae050" class="tab" ><label for="2dc4f3b414d347228c2357bbb9fae050-61bb40185783401ea3cdddfd46a407ad" >Startup</label>
-<input type="radio" id="2dc4f3b414d347228c2357bbb9fae050-f1e54a812b1140d28ea31d671770e9fc" name="2dc4f3b414d347228c2357bbb9fae050" class="tab" ><label for="2dc4f3b414d347228c2357bbb9fae050-f1e54a812b1140d28ea31d671770e9fc" >Android</label>
-<input type="radio" id="2dc4f3b414d347228c2357bbb9fae050-93f17a83c35a44ba86b0c099175136dd" name="2dc4f3b414d347228c2357bbb9fae050" class="tab" ><label for="2dc4f3b414d347228c2357bbb9fae050-93f17a83c35a44ba86b0c099175136dd" >iOS</label>
-<input type="radio" id="2dc4f3b414d347228c2357bbb9fae050-56268af8a8804757a5073b9afec8d81a" name="2dc4f3b414d347228c2357bbb9fae050" class="tab" ><label for="2dc4f3b414d347228c2357bbb9fae050-56268af8a8804757a5073b9afec8d81a" >Windows</label>
+<input type="radio" id="0d8a998bf354472395d0d41744737454-34646806f22b4783956c49fdaed769cf" name="0d8a998bf354472395d0d41744737454" class="tab" checked><label for="0d8a998bf354472395d0d41744737454-34646806f22b4783956c49fdaed769cf" >General</label>
+<input type="radio" id="0d8a998bf354472395d0d41744737454-497138dcb80f4e29886ded6d9deba72a" name="0d8a998bf354472395d0d41744737454" class="tab" ><label for="0d8a998bf354472395d0d41744737454-497138dcb80f4e29886ded6d9deba72a" >Startup</label>
+<input type="radio" id="0d8a998bf354472395d0d41744737454-3fb8923680334b88b5820f0d40b2b171" name="0d8a998bf354472395d0d41744737454" class="tab" ><label for="0d8a998bf354472395d0d41744737454-3fb8923680334b88b5820f0d40b2b171" >Android</label>
+<input type="radio" id="0d8a998bf354472395d0d41744737454-6dff9b62347d4cef8d4c32bda07f1963" name="0d8a998bf354472395d0d41744737454" class="tab" ><label for="0d8a998bf354472395d0d41744737454-6dff9b62347d4cef8d4c32bda07f1963" >iOS</label>
+<input type="radio" id="0d8a998bf354472395d0d41744737454-3146fd56c21f4511b394bd3a0c3faee1" name="0d8a998bf354472395d0d41744737454" class="tab" ><label for="0d8a998bf354472395d0d41744737454-3146fd56c21f4511b394bd3a0c3faee1" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
