--- a/push/firebase.html
+++ b/push/firebase.html
@@ -355,16 +355,19 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c3e0d61f20b14f169495d216a7916990-3c6e64ff96ab45bd87afb8b2fe6924d5" name="c3e0d61f20b14f169495d216a7916990" class="tab" checked=""><label for="c3e0d61f20b14f169495d216a7916990-3c6e64ff96ab45bd87afb8b2fe6924d5">General</label>
-<input type="radio" id="c3e0d61f20b14f169495d216a7916990-51c75fb3061d4bf2a4378ae609f1c92e" name="c3e0d61f20b14f169495d216a7916990" class="tab"><label for="c3e0d61f20b14f169495d216a7916990-51c75fb3061d4bf2a4378ae609f1c92e">Startup</label>
-<input type="radio" id="c3e0d61f20b14f169495d216a7916990-505037f7e7b54bdcaba200ee1401ea88" name="c3e0d61f20b14f169495d216a7916990" class="tab"><label for="c3e0d61f20b14f169495d216a7916990-505037f7e7b54bdcaba200ee1401ea88">Android</label>
-<input type="radio" id="c3e0d61f20b14f169495d216a7916990-4fb298e69309457890863324ac5523d1" name="c3e0d61f20b14f169495d216a7916990" class="tab"><label for="c3e0d61f20b14f169495d216a7916990-4fb298e69309457890863324ac5523d1">iOS</label>
+<input type="radio" id="cf1f891c352940ef8defcddeada3926e-90eaa7ee85824896937e8c6d0598a976" name="cf1f891c352940ef8defcddeada3926e" class="tab" checked=""><label for="cf1f891c352940ef8defcddeada3926e-90eaa7ee85824896937e8c6d0598a976">General</label>
+<input type="radio" id="cf1f891c352940ef8defcddeada3926e-c379c558096043acb1c20b2d69b108da" name="cf1f891c352940ef8defcddeada3926e" class="tab"><label for="cf1f891c352940ef8defcddeada3926e-c379c558096043acb1c20b2d69b108da">Startup</label>
+<input type="radio" id="cf1f891c352940ef8defcddeada3926e-cc7d448b190143cea364516530d33309" name="cf1f891c352940ef8defcddeada3926e" class="tab"><label for="cf1f891c352940ef8defcddeada3926e-cc7d448b190143cea364516530d33309">Android</label>
+<input type="radio" id="cf1f891c352940ef8defcddeada3926e-23c1946d89b94b599491728806d655dd" name="cf1f891c352940ef8defcddeada3926e" class="tab"><label for="cf1f891c352940ef8defcddeada3926e-23c1946d89b94b599491728806d655dd">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
