--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="95511d8b2acf4aed8b3c372f07770802-3b2fcf0a0d6e43738a47902294c30ce7" name="95511d8b2acf4aed8b3c372f07770802" class="tab" checked><label for="95511d8b2acf4aed8b3c372f07770802-3b2fcf0a0d6e43738a47902294c30ce7" >General</label>
-<input type="radio" id="95511d8b2acf4aed8b3c372f07770802-1d762fee38ca45fa9d7a1097f8c636d2" name="95511d8b2acf4aed8b3c372f07770802" class="tab" ><label for="95511d8b2acf4aed8b3c372f07770802-1d762fee38ca45fa9d7a1097f8c636d2" >Startup</label>
-<input type="radio" id="95511d8b2acf4aed8b3c372f07770802-1dc55bdea1f943a9a2e10f7f06e0843a" name="95511d8b2acf4aed8b3c372f07770802" class="tab" ><label for="95511d8b2acf4aed8b3c372f07770802-1dc55bdea1f943a9a2e10f7f06e0843a" >Android</label>
-<input type="radio" id="95511d8b2acf4aed8b3c372f07770802-51b03b28db1146bda530e579f44bfd45" name="95511d8b2acf4aed8b3c372f07770802" class="tab" ><label for="95511d8b2acf4aed8b3c372f07770802-51b03b28db1146bda530e579f44bfd45" >iOS</label>
-<input type="radio" id="95511d8b2acf4aed8b3c372f07770802-1d7e73ac3df041a49d532c2df8b742a7" name="95511d8b2acf4aed8b3c372f07770802" class="tab" ><label for="95511d8b2acf4aed8b3c372f07770802-1d7e73ac3df041a49d532c2df8b742a7" >Windows</label>
+<input type="radio" id="145d05ca2ad34781ad1695e0276cf8ed-6c34f2144d8a47cab936ac43fc3e10d6" name="145d05ca2ad34781ad1695e0276cf8ed" class="tab" checked><label for="145d05ca2ad34781ad1695e0276cf8ed-6c34f2144d8a47cab936ac43fc3e10d6" >General</label>
+<input type="radio" id="145d05ca2ad34781ad1695e0276cf8ed-53e97df78227460c8962966495a41f07" name="145d05ca2ad34781ad1695e0276cf8ed" class="tab" ><label for="145d05ca2ad34781ad1695e0276cf8ed-53e97df78227460c8962966495a41f07" >Startup</label>
+<input type="radio" id="145d05ca2ad34781ad1695e0276cf8ed-6a9bd8d58c23413a896405f16ed5f6ef" name="145d05ca2ad34781ad1695e0276cf8ed" class="tab" ><label for="145d05ca2ad34781ad1695e0276cf8ed-6a9bd8d58c23413a896405f16ed5f6ef" >Android</label>
+<input type="radio" id="145d05ca2ad34781ad1695e0276cf8ed-8dfc9e3f23e54319be8160677632b912" name="145d05ca2ad34781ad1695e0276cf8ed" class="tab" ><label for="145d05ca2ad34781ad1695e0276cf8ed-8dfc9e3f23e54319be8160677632b912" >iOS</label>
+<input type="radio" id="145d05ca2ad34781ad1695e0276cf8ed-e816188af5224937b3e75f866420c878" name="145d05ca2ad34781ad1695e0276cf8ed" class="tab" ><label for="145d05ca2ad34781ad1695e0276cf8ed-e816188af5224937b3e75f866420c878" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
