--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -357,16 +357,19 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e4fdd4d598084b90a8582ef192295890-71c9836e89f84c8db4885a09a7780ca2" name="e4fdd4d598084b90a8582ef192295890" class="tab" checked><label for="e4fdd4d598084b90a8582ef192295890-71c9836e89f84c8db4885a09a7780ca2" >General</label>
-<input type="radio" id="e4fdd4d598084b90a8582ef192295890-ddcf36cb217b485e8ddda465d2b8b346" name="e4fdd4d598084b90a8582ef192295890" class="tab" ><label for="e4fdd4d598084b90a8582ef192295890-ddcf36cb217b485e8ddda465d2b8b346" >Startup</label>
-<input type="radio" id="e4fdd4d598084b90a8582ef192295890-5499efab88bc4033a0d46b784e59a14f" name="e4fdd4d598084b90a8582ef192295890" class="tab" ><label for="e4fdd4d598084b90a8582ef192295890-5499efab88bc4033a0d46b784e59a14f" >Android</label>
-<input type="radio" id="e4fdd4d598084b90a8582ef192295890-33c43de238424dd59c6ca7f0b9f42198" name="e4fdd4d598084b90a8582ef192295890" class="tab" ><label for="e4fdd4d598084b90a8582ef192295890-33c43de238424dd59c6ca7f0b9f42198" >Windows</label>
+<input type="radio" id="c7be801cbb5f44f8af6274d9e6617e23-30692e1eac744ce7afaee092d3974865" name="c7be801cbb5f44f8af6274d9e6617e23" class="tab" checked><label for="c7be801cbb5f44f8af6274d9e6617e23-30692e1eac744ce7afaee092d3974865" >General</label>
+<input type="radio" id="c7be801cbb5f44f8af6274d9e6617e23-57d205bba17045048f69e5bf56850afc" name="c7be801cbb5f44f8af6274d9e6617e23" class="tab" ><label for="c7be801cbb5f44f8af6274d9e6617e23-57d205bba17045048f69e5bf56850afc" >Startup</label>
+<input type="radio" id="c7be801cbb5f44f8af6274d9e6617e23-32fd8705252f490f984fa7b6ae3b5f73" name="c7be801cbb5f44f8af6274d9e6617e23" class="tab" ><label for="c7be801cbb5f44f8af6274d9e6617e23-32fd8705252f490f984fa7b6ae3b5f73" >Android</label>
+<input type="radio" id="c7be801cbb5f44f8af6274d9e6617e23-cb547fd75ea24de2bc6a278a66f0b0fa" name="c7be801cbb5f44f8af6274d9e6617e23" class="tab" ><label for="c7be801cbb5f44f8af6274d9e6617e23-cb547fd75ea24de2bc6a278a66f0b0fa" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
