--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="cbf543e6ae5845eeb4035d990dd52bda-ab51872bf31f4b65a54377d79d4b242d" name="cbf543e6ae5845eeb4035d990dd52bda" class="tab" checked><label for="cbf543e6ae5845eeb4035d990dd52bda-ab51872bf31f4b65a54377d79d4b242d" >General</label>
-<input type="radio" id="cbf543e6ae5845eeb4035d990dd52bda-d8ad2f4286d54a47841f6e84b8c3c1d1" name="cbf543e6ae5845eeb4035d990dd52bda" class="tab" ><label for="cbf543e6ae5845eeb4035d990dd52bda-d8ad2f4286d54a47841f6e84b8c3c1d1" >Startup</label>
-<input type="radio" id="cbf543e6ae5845eeb4035d990dd52bda-02941a0478a8434a9c13840ec48cb031" name="cbf543e6ae5845eeb4035d990dd52bda" class="tab" ><label for="cbf543e6ae5845eeb4035d990dd52bda-02941a0478a8434a9c13840ec48cb031" >Android</label>
-<input type="radio" id="cbf543e6ae5845eeb4035d990dd52bda-a9a77362b92e41f699c03737f87d7f3d" name="cbf543e6ae5845eeb4035d990dd52bda" class="tab" ><label for="cbf543e6ae5845eeb4035d990dd52bda-a9a77362b92e41f699c03737f87d7f3d" >iOS</label>
-<input type="radio" id="cbf543e6ae5845eeb4035d990dd52bda-1f3a31114bd24b18a0f5ddc4b7fa78e6" name="cbf543e6ae5845eeb4035d990dd52bda" class="tab" ><label for="cbf543e6ae5845eeb4035d990dd52bda-1f3a31114bd24b18a0f5ddc4b7fa78e6" >Windows</label>
+<input type="radio" id="d12ab4e858a24e5f8eb8b9e7b5dc4651-7f2f35ffa422495893e586d9be3d4353" name="d12ab4e858a24e5f8eb8b9e7b5dc4651" class="tab" checked><label for="d12ab4e858a24e5f8eb8b9e7b5dc4651-7f2f35ffa422495893e586d9be3d4353" >General</label>
+<input type="radio" id="d12ab4e858a24e5f8eb8b9e7b5dc4651-f7106bce9b214dc9888c89b3a07d8f7e" name="d12ab4e858a24e5f8eb8b9e7b5dc4651" class="tab" ><label for="d12ab4e858a24e5f8eb8b9e7b5dc4651-f7106bce9b214dc9888c89b3a07d8f7e" >Startup</label>
+<input type="radio" id="d12ab4e858a24e5f8eb8b9e7b5dc4651-c69d03f7080f42c982af8a487c07a5b5" name="d12ab4e858a24e5f8eb8b9e7b5dc4651" class="tab" ><label for="d12ab4e858a24e5f8eb8b9e7b5dc4651-c69d03f7080f42c982af8a487c07a5b5" >Android</label>
+<input type="radio" id="d12ab4e858a24e5f8eb8b9e7b5dc4651-e8cf60f8455c4d67999c78ed0ac6a8c8" name="d12ab4e858a24e5f8eb8b9e7b5dc4651" class="tab" ><label for="d12ab4e858a24e5f8eb8b9e7b5dc4651-e8cf60f8455c4d67999c78ed0ac6a8c8" >iOS</label>
+<input type="radio" id="d12ab4e858a24e5f8eb8b9e7b5dc4651-e6960eee0b2f440bbfc1ab98ccb94c9e" name="d12ab4e858a24e5f8eb8b9e7b5dc4651" class="tab" ><label for="d12ab4e858a24e5f8eb8b9e7b5dc4651-e6960eee0b2f440bbfc1ab98ccb94c9e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
