--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f149926a0d074df8a598ee0c16386f40-0b85c66ffcda438d9d8b56dc3f036be2" name="f149926a0d074df8a598ee0c16386f40" class="tab" checked><label for="f149926a0d074df8a598ee0c16386f40-0b85c66ffcda438d9d8b56dc3f036be2" >General</label>
-<input type="radio" id="f149926a0d074df8a598ee0c16386f40-f5f2027809a94ceca0abb8df8ab0946c" name="f149926a0d074df8a598ee0c16386f40" class="tab" ><label for="f149926a0d074df8a598ee0c16386f40-f5f2027809a94ceca0abb8df8ab0946c" >Startup</label>
-<input type="radio" id="f149926a0d074df8a598ee0c16386f40-cfda36d27624404c998c196e969bf29f" name="f149926a0d074df8a598ee0c16386f40" class="tab" ><label for="f149926a0d074df8a598ee0c16386f40-cfda36d27624404c998c196e969bf29f" >Android</label>
-<input type="radio" id="f149926a0d074df8a598ee0c16386f40-886d0f80d3194f2ea4bab2ef052bad04" name="f149926a0d074df8a598ee0c16386f40" class="tab" ><label for="f149926a0d074df8a598ee0c16386f40-886d0f80d3194f2ea4bab2ef052bad04" >iOS</label>
-<input type="radio" id="f149926a0d074df8a598ee0c16386f40-5ed0b72a79ca4cfa81ddda8ce29c9cbc" name="f149926a0d074df8a598ee0c16386f40" class="tab" ><label for="f149926a0d074df8a598ee0c16386f40-5ed0b72a79ca4cfa81ddda8ce29c9cbc" >Windows</label>
+<input type="radio" id="f1c90e9c5da343d8a07a00b14ecc83e6-b9c3ec11bbe24428a8c24f69e2243e9a" name="f1c90e9c5da343d8a07a00b14ecc83e6" class="tab" checked><label for="f1c90e9c5da343d8a07a00b14ecc83e6-b9c3ec11bbe24428a8c24f69e2243e9a" >General</label>
+<input type="radio" id="f1c90e9c5da343d8a07a00b14ecc83e6-592d370cd8784cafabc484f3727c1290" name="f1c90e9c5da343d8a07a00b14ecc83e6" class="tab" ><label for="f1c90e9c5da343d8a07a00b14ecc83e6-592d370cd8784cafabc484f3727c1290" >Startup</label>
+<input type="radio" id="f1c90e9c5da343d8a07a00b14ecc83e6-2db780976c3742639e1f9139c384fb57" name="f1c90e9c5da343d8a07a00b14ecc83e6" class="tab" ><label for="f1c90e9c5da343d8a07a00b14ecc83e6-2db780976c3742639e1f9139c384fb57" >Android</label>
+<input type="radio" id="f1c90e9c5da343d8a07a00b14ecc83e6-46e2e697307e4cb99efc49a45e1aef38" name="f1c90e9c5da343d8a07a00b14ecc83e6" class="tab" ><label for="f1c90e9c5da343d8a07a00b14ecc83e6-46e2e697307e4cb99efc49a45e1aef38" >iOS</label>
+<input type="radio" id="f1c90e9c5da343d8a07a00b14ecc83e6-c77752b29f184cab8ca547035fdd44b2" name="f1c90e9c5da343d8a07a00b14ecc83e6" class="tab" ><label for="f1c90e9c5da343d8a07a00b14ecc83e6-c77752b29f184cab8ca547035fdd44b2" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
