--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="fb67b7c060804d769900f47529a94544-2bc0b6eaa95d4fc8b2c77626272c95b2" name="fb67b7c060804d769900f47529a94544" class="tab" checked><label for="fb67b7c060804d769900f47529a94544-2bc0b6eaa95d4fc8b2c77626272c95b2" >General</label>
-<input type="radio" id="fb67b7c060804d769900f47529a94544-1d52d720ae06427e9562d805c543d8f0" name="fb67b7c060804d769900f47529a94544" class="tab" ><label for="fb67b7c060804d769900f47529a94544-1d52d720ae06427e9562d805c543d8f0" >Startup</label>
-<input type="radio" id="fb67b7c060804d769900f47529a94544-7c7ae6625ee149049495c6b31f5e2fc8" name="fb67b7c060804d769900f47529a94544" class="tab" ><label for="fb67b7c060804d769900f47529a94544-7c7ae6625ee149049495c6b31f5e2fc8" >Android</label>
-<input type="radio" id="fb67b7c060804d769900f47529a94544-71cc400dc1b0410eb36f594106b9b61d" name="fb67b7c060804d769900f47529a94544" class="tab" ><label for="fb67b7c060804d769900f47529a94544-71cc400dc1b0410eb36f594106b9b61d" >iOS</label>
-<input type="radio" id="fb67b7c060804d769900f47529a94544-c630c5ef28734f8d9ad3bf4b931ad7c2" name="fb67b7c060804d769900f47529a94544" class="tab" ><label for="fb67b7c060804d769900f47529a94544-c630c5ef28734f8d9ad3bf4b931ad7c2" >Windows</label>
+<input type="radio" id="070f0db8421a45f38e9a53ea0368a796-fe0471a6cdc641e88cbb594d07d2e5de" name="070f0db8421a45f38e9a53ea0368a796" class="tab" checked><label for="070f0db8421a45f38e9a53ea0368a796-fe0471a6cdc641e88cbb594d07d2e5de" >General</label>
+<input type="radio" id="070f0db8421a45f38e9a53ea0368a796-c2e605bbcb644cac814f789183de0e52" name="070f0db8421a45f38e9a53ea0368a796" class="tab" ><label for="070f0db8421a45f38e9a53ea0368a796-c2e605bbcb644cac814f789183de0e52" >Startup</label>
+<input type="radio" id="070f0db8421a45f38e9a53ea0368a796-96b64453723c4eb8961c02a86c001a83" name="070f0db8421a45f38e9a53ea0368a796" class="tab" ><label for="070f0db8421a45f38e9a53ea0368a796-96b64453723c4eb8961c02a86c001a83" >Android</label>
+<input type="radio" id="070f0db8421a45f38e9a53ea0368a796-342e60050e3545f9a7f10ef4a6d65d50" name="070f0db8421a45f38e9a53ea0368a796" class="tab" ><label for="070f0db8421a45f38e9a53ea0368a796-342e60050e3545f9a7f10ef4a6d65d50" >iOS</label>
+<input type="radio" id="070f0db8421a45f38e9a53ea0368a796-c9725b818486442f90d84c1841993292" name="070f0db8421a45f38e9a53ea0368a796" class="tab" ><label for="070f0db8421a45f38e9a53ea0368a796-c9725b818486442f90d84c1841993292" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
