--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -357,15 +357,18 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="4241ff37fc284f82a5cd860c3bac1a2a-b0d89a1a14fe4a0a940c895d8228e7ed" name="4241ff37fc284f82a5cd860c3bac1a2a" class="tab" checked><label for="4241ff37fc284f82a5cd860c3bac1a2a-b0d89a1a14fe4a0a940c895d8228e7ed" >General</label>
-<input type="radio" id="4241ff37fc284f82a5cd860c3bac1a2a-47e1845931ba422e8dbb81032c31eea5" name="4241ff37fc284f82a5cd860c3bac1a2a" class="tab" ><label for="4241ff37fc284f82a5cd860c3bac1a2a-47e1845931ba422e8dbb81032c31eea5" >Startup</label>
-<input type="radio" id="4241ff37fc284f82a5cd860c3bac1a2a-59d2c0641df14a07a1ba97f4c188b4f3" name="4241ff37fc284f82a5cd860c3bac1a2a" class="tab" ><label for="4241ff37fc284f82a5cd860c3bac1a2a-59d2c0641df14a07a1ba97f4c188b4f3" >Android</label>
+<input type="radio" id="8ef23fe9c8674bb8877ed282fbe990ae-554d38281a5d4bfc8f81813245de0e93" name="8ef23fe9c8674bb8877ed282fbe990ae" class="tab" checked><label for="8ef23fe9c8674bb8877ed282fbe990ae-554d38281a5d4bfc8f81813245de0e93" >General</label>
+<input type="radio" id="8ef23fe9c8674bb8877ed282fbe990ae-ca96a1cc573445208df0f7f579387c8c" name="8ef23fe9c8674bb8877ed282fbe990ae" class="tab" ><label for="8ef23fe9c8674bb8877ed282fbe990ae-ca96a1cc573445208df0f7f579387c8c" >Startup</label>
+<input type="radio" id="8ef23fe9c8674bb8877ed282fbe990ae-4451aa9bfb3f446da972a92f9a67985c" name="8ef23fe9c8674bb8877ed282fbe990ae" class="tab" ><label for="8ef23fe9c8674bb8877ed282fbe990ae-4451aa9bfb3f446da972a92f9a67985c" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
