--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="73ba2416a6744661b849e3b289e57ba2-2fce69f489f74cef81eb8eba51b00e5c" name="73ba2416a6744661b849e3b289e57ba2" class="tab" checked><label for="73ba2416a6744661b849e3b289e57ba2-2fce69f489f74cef81eb8eba51b00e5c" >General</label>
-<input type="radio" id="73ba2416a6744661b849e3b289e57ba2-be7ec3cfb01849d8804347e1d8eb5385" name="73ba2416a6744661b849e3b289e57ba2" class="tab" ><label for="73ba2416a6744661b849e3b289e57ba2-be7ec3cfb01849d8804347e1d8eb5385" >Startup</label>
-<input type="radio" id="73ba2416a6744661b849e3b289e57ba2-940ff4f490604f539276697a82d892c7" name="73ba2416a6744661b849e3b289e57ba2" class="tab" ><label for="73ba2416a6744661b849e3b289e57ba2-940ff4f490604f539276697a82d892c7" >Android</label>
-<input type="radio" id="73ba2416a6744661b849e3b289e57ba2-04c4d92305d54a71938a1c172835b892" name="73ba2416a6744661b849e3b289e57ba2" class="tab" ><label for="73ba2416a6744661b849e3b289e57ba2-04c4d92305d54a71938a1c172835b892" >iOS</label>
-<input type="radio" id="73ba2416a6744661b849e3b289e57ba2-a3aba095b24740c1a9aa76856158ddad" name="73ba2416a6744661b849e3b289e57ba2" class="tab" ><label for="73ba2416a6744661b849e3b289e57ba2-a3aba095b24740c1a9aa76856158ddad" >Windows</label>
+<input type="radio" id="4ed1d390510641e99885f5280568c54e-e17701146fdf46f283348217e4de6505" name="4ed1d390510641e99885f5280568c54e" class="tab" checked><label for="4ed1d390510641e99885f5280568c54e-e17701146fdf46f283348217e4de6505" >General</label>
+<input type="radio" id="4ed1d390510641e99885f5280568c54e-97f48e2cac6c4224b4c2422b2ca3cc61" name="4ed1d390510641e99885f5280568c54e" class="tab" ><label for="4ed1d390510641e99885f5280568c54e-97f48e2cac6c4224b4c2422b2ca3cc61" >Startup</label>
+<input type="radio" id="4ed1d390510641e99885f5280568c54e-054ed721953e4fa2a32b71b7e6adeeda" name="4ed1d390510641e99885f5280568c54e" class="tab" ><label for="4ed1d390510641e99885f5280568c54e-054ed721953e4fa2a32b71b7e6adeeda" >Android</label>
+<input type="radio" id="4ed1d390510641e99885f5280568c54e-8515c2bfd48146d194958f27d4073877" name="4ed1d390510641e99885f5280568c54e" class="tab" ><label for="4ed1d390510641e99885f5280568c54e-8515c2bfd48146d194958f27d4073877" >iOS</label>
+<input type="radio" id="4ed1d390510641e99885f5280568c54e-0f50d9914566480cb17c2509bbefd71b" name="4ed1d390510641e99885f5280568c54e" class="tab" ><label for="4ed1d390510641e99885f5280568c54e-0f50d9914566480cb17c2509bbefd71b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
