--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="871aefcc91d04dcdafee29554766c2b6-98967ca429934ef1a4518e7166d28b72" name="871aefcc91d04dcdafee29554766c2b6" class="tab" checked><label for="871aefcc91d04dcdafee29554766c2b6-98967ca429934ef1a4518e7166d28b72" >General</label>
-<input type="radio" id="871aefcc91d04dcdafee29554766c2b6-67c9ca05ce684491bee3823a7f12d634" name="871aefcc91d04dcdafee29554766c2b6" class="tab" ><label for="871aefcc91d04dcdafee29554766c2b6-67c9ca05ce684491bee3823a7f12d634" >Startup</label>
-<input type="radio" id="871aefcc91d04dcdafee29554766c2b6-c78b919e3e5d4f1c871242e33484f6c0" name="871aefcc91d04dcdafee29554766c2b6" class="tab" ><label for="871aefcc91d04dcdafee29554766c2b6-c78b919e3e5d4f1c871242e33484f6c0" >Android</label>
-<input type="radio" id="871aefcc91d04dcdafee29554766c2b6-fcf3ed47ed0e47e3806b01212dc6e23c" name="871aefcc91d04dcdafee29554766c2b6" class="tab" ><label for="871aefcc91d04dcdafee29554766c2b6-fcf3ed47ed0e47e3806b01212dc6e23c" >iOS</label>
-<input type="radio" id="871aefcc91d04dcdafee29554766c2b6-7f890e4a24774f74b40dcdefa572c368" name="871aefcc91d04dcdafee29554766c2b6" class="tab" ><label for="871aefcc91d04dcdafee29554766c2b6-7f890e4a24774f74b40dcdefa572c368" >Windows</label>
+<input type="radio" id="3b365e8a1dce402a8ef809a41e9d45cc-8aa59627599e4a2799b916df18d1f769" name="3b365e8a1dce402a8ef809a41e9d45cc" class="tab" checked><label for="3b365e8a1dce402a8ef809a41e9d45cc-8aa59627599e4a2799b916df18d1f769" >General</label>
+<input type="radio" id="3b365e8a1dce402a8ef809a41e9d45cc-843a8f069ae94b1a9cd8cb797abbe019" name="3b365e8a1dce402a8ef809a41e9d45cc" class="tab" ><label for="3b365e8a1dce402a8ef809a41e9d45cc-843a8f069ae94b1a9cd8cb797abbe019" >Startup</label>
+<input type="radio" id="3b365e8a1dce402a8ef809a41e9d45cc-38b5ea9c2ff5437387c1eea7c198afba" name="3b365e8a1dce402a8ef809a41e9d45cc" class="tab" ><label for="3b365e8a1dce402a8ef809a41e9d45cc-38b5ea9c2ff5437387c1eea7c198afba" >Android</label>
+<input type="radio" id="3b365e8a1dce402a8ef809a41e9d45cc-428371770e394a5d940785cff0a5f83c" name="3b365e8a1dce402a8ef809a41e9d45cc" class="tab" ><label for="3b365e8a1dce402a8ef809a41e9d45cc-428371770e394a5d940785cff0a5f83c" >iOS</label>
+<input type="radio" id="3b365e8a1dce402a8ef809a41e9d45cc-6f5d6185d81f4bf29ee10c32d261ca33" name="3b365e8a1dce402a8ef809a41e9d45cc" class="tab" ><label for="3b365e8a1dce402a8ef809a41e9d45cc-6f5d6185d81f4bf29ee10c32d261ca33" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
