--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -357,15 +357,18 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="461926e7e2174269956ca85c895fa028-926d155772234f5eb639fdc2b943cff6" name="461926e7e2174269956ca85c895fa028" class="tab" checked><label for="461926e7e2174269956ca85c895fa028-926d155772234f5eb639fdc2b943cff6" >General</label>
-<input type="radio" id="461926e7e2174269956ca85c895fa028-e72c84a1695b4439a9b7ad4942070a2f" name="461926e7e2174269956ca85c895fa028" class="tab" ><label for="461926e7e2174269956ca85c895fa028-e72c84a1695b4439a9b7ad4942070a2f" >Startup</label>
-<input type="radio" id="461926e7e2174269956ca85c895fa028-78f1d5aceb3143749a2862550237f366" name="461926e7e2174269956ca85c895fa028" class="tab" ><label for="461926e7e2174269956ca85c895fa028-78f1d5aceb3143749a2862550237f366" >Android</label>
+<input type="radio" id="5ba6c6b0afe64be7a67dff1bd753c64d-0e7a8e26d8cd421fbcf1a847685f9a54" name="5ba6c6b0afe64be7a67dff1bd753c64d" class="tab" checked><label for="5ba6c6b0afe64be7a67dff1bd753c64d-0e7a8e26d8cd421fbcf1a847685f9a54" >General</label>
+<input type="radio" id="5ba6c6b0afe64be7a67dff1bd753c64d-521147e3e44d42a8b53fd915881cddb4" name="5ba6c6b0afe64be7a67dff1bd753c64d" class="tab" ><label for="5ba6c6b0afe64be7a67dff1bd753c64d-521147e3e44d42a8b53fd915881cddb4" >Startup</label>
+<input type="radio" id="5ba6c6b0afe64be7a67dff1bd753c64d-41e979051fce47a9ba7f7f31163f589d" name="5ba6c6b0afe64be7a67dff1bd753c64d" class="tab" ><label for="5ba6c6b0afe64be7a67dff1bd753c64d-41e979051fce47a9ba7f7f31163f589d" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
