--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -357,7 +357,10 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -369,11 +372,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="4803e2a22bef4367beae1e557066d0f4-d9b182d28bdb45e6a1b30f9e4f0d36b5" name="4803e2a22bef4367beae1e557066d0f4" class="tab" checked><label for="4803e2a22bef4367beae1e557066d0f4-d9b182d28bdb45e6a1b30f9e4f0d36b5" >General</label>
-<input type="radio" id="4803e2a22bef4367beae1e557066d0f4-71e876310a6342d99cf9799173a03123" name="4803e2a22bef4367beae1e557066d0f4" class="tab" ><label for="4803e2a22bef4367beae1e557066d0f4-71e876310a6342d99cf9799173a03123" >Startup</label>
-<input type="radio" id="4803e2a22bef4367beae1e557066d0f4-d6da8fbfe29a490ca5383a81b668fe03" name="4803e2a22bef4367beae1e557066d0f4" class="tab" ><label for="4803e2a22bef4367beae1e557066d0f4-d6da8fbfe29a490ca5383a81b668fe03" >Android</label>
-<input type="radio" id="4803e2a22bef4367beae1e557066d0f4-6eb677bd0dea4155ac25805c445b5aba" name="4803e2a22bef4367beae1e557066d0f4" class="tab" ><label for="4803e2a22bef4367beae1e557066d0f4-6eb677bd0dea4155ac25805c445b5aba" >iOS</label>
-<input type="radio" id="4803e2a22bef4367beae1e557066d0f4-b101f22331714eeda4222ea34c508e54" name="4803e2a22bef4367beae1e557066d0f4" class="tab" ><label for="4803e2a22bef4367beae1e557066d0f4-b101f22331714eeda4222ea34c508e54" >Windows</label></li>
+<input type="radio" id="b0405346b6434b5aa9594d3ab7e11cc3-b14febaa80034feaa508e8c6732b3047" name="b0405346b6434b5aa9594d3ab7e11cc3" class="tab" checked><label for="b0405346b6434b5aa9594d3ab7e11cc3-b14febaa80034feaa508e8c6732b3047" >General</label>
+<input type="radio" id="b0405346b6434b5aa9594d3ab7e11cc3-4b08e0dc23204254b2231cd5fd8cb6ed" name="b0405346b6434b5aa9594d3ab7e11cc3" class="tab" ><label for="b0405346b6434b5aa9594d3ab7e11cc3-4b08e0dc23204254b2231cd5fd8cb6ed" >Startup</label>
+<input type="radio" id="b0405346b6434b5aa9594d3ab7e11cc3-d89eebdf03694f6db695d4281e0d748f" name="b0405346b6434b5aa9594d3ab7e11cc3" class="tab" ><label for="b0405346b6434b5aa9594d3ab7e11cc3-d89eebdf03694f6db695d4281e0d748f" >Android</label>
+<input type="radio" id="b0405346b6434b5aa9594d3ab7e11cc3-347e0b16e6c14f0cafb290a50ceefaa1" name="b0405346b6434b5aa9594d3ab7e11cc3" class="tab" ><label for="b0405346b6434b5aa9594d3ab7e11cc3-347e0b16e6c14f0cafb290a50ceefaa1" >iOS</label>
+<input type="radio" id="b0405346b6434b5aa9594d3ab7e11cc3-b15079cfdfdd451996ca79b0c1e228b6" name="b0405346b6434b5aa9594d3ab7e11cc3" class="tab" ><label for="b0405346b6434b5aa9594d3ab7e11cc3-b15079cfdfdd451996ca79b0c1e228b6" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
