--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -357,17 +357,20 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="526f5575fc474336b3cb6ec28e2f1b1a-63bda88976cd4f0f9e2d1480d27cc292" name="526f5575fc474336b3cb6ec28e2f1b1a" class="tab" checked><label for="526f5575fc474336b3cb6ec28e2f1b1a-63bda88976cd4f0f9e2d1480d27cc292" >General</label>
-<input type="radio" id="526f5575fc474336b3cb6ec28e2f1b1a-e95333993dc04c6b92ca3713398bdc67" name="526f5575fc474336b3cb6ec28e2f1b1a" class="tab" ><label for="526f5575fc474336b3cb6ec28e2f1b1a-e95333993dc04c6b92ca3713398bdc67" >Startup</label>
-<input type="radio" id="526f5575fc474336b3cb6ec28e2f1b1a-c1bfe329c93c48549a64ddf3b410c9be" name="526f5575fc474336b3cb6ec28e2f1b1a" class="tab" ><label for="526f5575fc474336b3cb6ec28e2f1b1a-c1bfe329c93c48549a64ddf3b410c9be" >Android</label>
-<input type="radio" id="526f5575fc474336b3cb6ec28e2f1b1a-eb5e68c0cf2f46199886cdc60c63f54b" name="526f5575fc474336b3cb6ec28e2f1b1a" class="tab" ><label for="526f5575fc474336b3cb6ec28e2f1b1a-eb5e68c0cf2f46199886cdc60c63f54b" >iOS</label>
+<input type="radio" id="a351d62f85714401adce2272c64b7896-64c4cf9b93284861bed6e378b2fe3f28" name="a351d62f85714401adce2272c64b7896" class="tab" checked><label for="a351d62f85714401adce2272c64b7896-64c4cf9b93284861bed6e378b2fe3f28" >General</label>
+<input type="radio" id="a351d62f85714401adce2272c64b7896-eba67688c3944dacbddd1346f723838c" name="a351d62f85714401adce2272c64b7896" class="tab" ><label for="a351d62f85714401adce2272c64b7896-eba67688c3944dacbddd1346f723838c" >Startup</label>
+<input type="radio" id="a351d62f85714401adce2272c64b7896-563bfac1bb264aefa2aff409a6e0872a" name="a351d62f85714401adce2272c64b7896" class="tab" ><label for="a351d62f85714401adce2272c64b7896-563bfac1bb264aefa2aff409a6e0872a" >Android</label>
+<input type="radio" id="a351d62f85714401adce2272c64b7896-7798d5a688034f76a4ba761d0a86a14c" name="a351d62f85714401adce2272c64b7896" class="tab" ><label for="a351d62f85714401adce2272c64b7896-7798d5a688034f76a4ba761d0a86a14c" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
