--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - v2.2.0 (June 14, 2021)</title>
+    <title>Shiny.NET - v2.2.0 (July 8, 2021)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">v2.2.0 (June 14, 2021)</div>
+                                <div class="text-white m-0 title">v2.2.0 (July 8, 2021)</div>
                             </div>
                         </div>
                     </div>
@@ -356,8 +356,11 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
                                                         <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -365,12 +368,20 @@
                                     <h3 id="core">Core</h3>
 <ul>
 <li>[BREAKING] Moving from full blown MSFT Logging to just the abstractions.  This will negate being able to inject ILogger<T></li>
-<li>[Enhancement][Android] Xamarin.Essentials.Platform.OnNewIntent is now wired in automatically by the source generators [#620]</li>
+<li>[Enhancement] Source generators will initialize Dan Siegel's excellent Mobile.BuildTools.Configuration if present</li>
+<li>[Enhancement][Android] Xamarin.Essentials is now wired in automatically by the source generators for Activity OnResume and OnNewIntent  [#620]</li>
+<li>[Enhancement][iOS] Xamarin.Essentials is now wired in automatically by the source generators for AppDelegate OpenUrl (if MSAL is not present) and PerformActionForShortcutItem</li>
+<li>[Fix] Ensure global is generated in front of startup and XF app type names to ensure there is no collisions with other types</li>
 </ul>
 <h3 id="bluetoothle">BluetoothLE</h3>
 <ul>
+<li>[BREAKING] IBleManager.WhenAccessStatusChanged &amp; IBleManager.Status removed - RequestAccess is a one stop shop</li>
 <li>[Fix][Android] IBleManager.WhenStateChanged now responds properly on Android 10+</li>
 <li>[Fix][Android] Pairing response now responds properly to accept and cancel of a request</li>
+</ul>
+<h3 id="locations">Locations</h3>
+<ul>
+<li>[BREAKING] IGpsManager/IGeofenceManager.WhenAccessStatusChanged &amp; IGpsManager/IGeofenceManager.Status removed - RequestAccess is a one stop shop</li>
 </ul>
 <h3 id="beacons">Beacons</h3>
 <ul>
