--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -357,16 +357,19 @@
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                            <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6db62d64878b4ad9be1c3d7a87d2a0d2-793c18e66dd841429d42f0509492f6d7" name="6db62d64878b4ad9be1c3d7a87d2a0d2" class="tab" checked><label for="6db62d64878b4ad9be1c3d7a87d2a0d2-793c18e66dd841429d42f0509492f6d7" >General</label>
-<input type="radio" id="6db62d64878b4ad9be1c3d7a87d2a0d2-559c801695b241f8a05a453e5886b8bb" name="6db62d64878b4ad9be1c3d7a87d2a0d2" class="tab" ><label for="6db62d64878b4ad9be1c3d7a87d2a0d2-559c801695b241f8a05a453e5886b8bb" >Startup</label>
-<input type="radio" id="6db62d64878b4ad9be1c3d7a87d2a0d2-c1be5634cae244d6b3f3495bd7b02150" name="6db62d64878b4ad9be1c3d7a87d2a0d2" class="tab" ><label for="6db62d64878b4ad9be1c3d7a87d2a0d2-c1be5634cae244d6b3f3495bd7b02150" >Android</label>
-<input type="radio" id="6db62d64878b4ad9be1c3d7a87d2a0d2-ee32053a95e04ecf83ea28e36c5c88ac" name="6db62d64878b4ad9be1c3d7a87d2a0d2" class="tab" ><label for="6db62d64878b4ad9be1c3d7a87d2a0d2-ee32053a95e04ecf83ea28e36c5c88ac" >iOS</label>
+<input type="radio" id="704bab5be6894c599c2447aa8e0d02fa-4606f6b0fca149978864e36e4fb2ef49" name="704bab5be6894c599c2447aa8e0d02fa" class="tab" checked><label for="704bab5be6894c599c2447aa8e0d02fa-4606f6b0fca149978864e36e4fb2ef49" >General</label>
+<input type="radio" id="704bab5be6894c599c2447aa8e0d02fa-dc569b490e754f13a78fdf2e13fd21f3" name="704bab5be6894c599c2447aa8e0d02fa" class="tab" ><label for="704bab5be6894c599c2447aa8e0d02fa-dc569b490e754f13a78fdf2e13fd21f3" >Startup</label>
+<input type="radio" id="704bab5be6894c599c2447aa8e0d02fa-c5f6f436bc2f4d50843a672a0d79e405" name="704bab5be6894c599c2447aa8e0d02fa" class="tab" ><label for="704bab5be6894c599c2447aa8e0d02fa-c5f6f436bc2f4d50843a672a0d79e405" >Android</label>
+<input type="radio" id="704bab5be6894c599c2447aa8e0d02fa-cd3e04b9262b4e8fb03b8eda836c1c30" name="704bab5be6894c599c2447aa8e0d02fa" class="tab" ><label for="704bab5be6894c599c2447aa8e0d02fa-cd3e04b9262b4e8fb03b8eda836c1c30" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
