--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -367,11 +367,16 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <h3 id="core">Core</h3>
 <ul>
-<li>[BREAKING] Moving from full blown MSFT Logging to just the abstractions.  This will negate being able to inject ILogger<T></li>
+<li>[BREAKING] Shiny now uses it's own logger factory for Microsoft.Extension.Logging to provide a huge startup performance boost though this may break 3rd party providers.  Shiny comes with Debug, Sqlite, and AppCenter out-of-the-box and they all work! <a href="https://github.com/shinyorg/shiny/issues/625">GH0625</a></li>
 <li>[Enhancement] Source generators will initialize Dan Siegel's excellent Mobile.BuildTools.Configuration if present</li>
-<li>[Enhancement][Android] Xamarin.Essentials is now wired in automatically by the source generators for Activity OnResume and OnNewIntent  [#620]</li>
+<li>[Enhancement] Add the necessary constructor to ShinyStartup to register xplat services</li>
+<li>[Enhancement][Android] Xamarin.Essentials is now wired in automatically by the source generators for Activity OnResume and OnNewIntent  <a href="https://github.com/shinyorg/shiny/issues/620">GH-620</a></li>
 <li>[Enhancement][iOS] Xamarin.Essentials is now wired in automatically by the source generators for AppDelegate OpenUrl (if MSAL is not present) and PerformActionForShortcutItem</li>
+<li>[Enhancement] New startup helper (services.ClearJobQueueBeforeRegistration) - this will clear any previously registered jobs before registering new startup jobs - this is useful if you only use startup jobs and you want to clean up potentially old versions of jobs</li>
 <li>[Fix] Ensure global is generated in front of startup and XF app type names to ensure there is no collisions with other types</li>
+<li>[Fix][Android] Activity handler was not sending out proper resume state <a href="https://github.com/shinyorg/shiny/issues/640">GH-640</a></li>
+<li>[Fix][Android] Platform state was not monitoring properly <a href="https://github.com/shinyorg/shiny/issues/640">GH-640</a></li>
+<li>[Fix] Job foregrounding won't run your job multiple times on startup</li>
 </ul>
 <h3 id="bluetoothle">BluetoothLE</h3>
 <ul>
