--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - v2.2.0 (July 8, 2021)</title>
+    <title>Shiny.NET - v2.2.0 (July 18, 2021)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">v2.2.0 (July 8, 2021)</div>
+                                <div class="text-white m-0 title">v2.2.0 (July 18, 2021)</div>
                             </div>
                         </div>
                     </div>
@@ -156,19 +156,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/beacons">Beacons</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/beacons/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/beacons/monitoring">Monitoring</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/beacons/ranging">Ranging</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/ble">Bluetooth LE</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -194,6 +181,19 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/beacons">Beacons</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/beacons/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/beacons/monitoring">Monitoring</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/beacons/ranging">Ranging</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/blehosting">Bluetooth LE Hosting</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -204,6 +204,16 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/blehosting/hosting">Hosting</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/httptransfers">HTTP Transfers</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/httptransfers/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/httptransfers/advanced">Advanced</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -229,16 +239,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/httptransfers">HTTP Transfers</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/httptransfers/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/httptransfers/advanced">Advanced</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 8, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -377,6 +377,7 @@
 <li>[Fix][Android] Activity handler was not sending out proper resume state <a href="https://github.com/shinyorg/shiny/issues/640">GH-640</a></li>
 <li>[Fix][Android] Platform state was not monitoring properly <a href="https://github.com/shinyorg/shiny/issues/640">GH-640</a></li>
 <li>[Fix] Job foregrounding won't run your job multiple times on startup</li>
+<li>[Fix] BgTaskJobManager now calls the proper tasked jobs</li>
 </ul>
 <h3 id="bluetoothle">BluetoothLE</h3>
 <ul>
