--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -156,6 +156,19 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/beacons">Beacons</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/beacons/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/beacons/monitoring">Monitoring</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/beacons/ranging">Ranging</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/ble">Bluetooth LE</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -181,19 +194,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/beacons">Beacons</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/beacons/gettingstarted">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/beacons/monitoring">Monitoring</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/beacons/ranging">Ranging</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/blehosting">Bluetooth LE Hosting</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -204,16 +204,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/blehosting/hosting">Hosting</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/httptransfers">HTTP Transfers</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/httptransfers/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/httptransfers/advanced">Advanced</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -239,6 +229,16 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/httptransfers">HTTP Transfers</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/httptransfers/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/httptransfers/advanced">Advanced</a>
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
@@ -378,6 +378,7 @@
 <li>[Fix][Android] Platform state was not monitoring properly <a href="https://github.com/shinyorg/shiny/issues/640">GH-640</a></li>
 <li>[Fix] Job foregrounding won't run your job multiple times on startup</li>
 <li>[Fix] BgTaskJobManager now calls the proper tasked jobs</li>
+<li>[Fix] Ensure all state bindables are completed before startup tasks</li>
 </ul>
 <h3 id="bluetoothle">BluetoothLE</h3>
 <ul>
